fix files and images view (added file link)

--- a/src/Template/cup/form-file.twig
+++ b/src/Template/cup/form-file.twig
@@ -7,8 +7,6 @@
 
 {% block fileimage %}
     {% if parameter('file_is_enabled', 'yes') == 'yes' %}
-        <hr>
-
         <div data-filedocument class="row">
             <div class="col-md-12">
                 {% include 'cup/form.twig' with {
@@ -23,35 +21,29 @@
                     }
                 } %}
 
-                {% if entity.getDocuments() %}
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th scope="col" style="width: 60%;">{{ 'File name'|locale }}</th>
-                                <th scope="col">{{ 'Size'|locale }}</th>
-                                <th scope="col"></th>
-                            </tr>
-                        </thead>
+                {% if entity.hasFiles() %}
+                    <div class="row font-weight-bold">
+                        <div class="col-6">{{ 'File name'|locale }}</div>
+                        <div class="col-4 text-right">{{ 'Size'|locale }}</div>
+                        <div class="col-2 text-right"></div>
+                    </div>
 
-                        <tbody>
-                            {% for file in entity.getDocuments() %}
-                                <tr>
-                                    <td>{{ file.filename() }}</td>
-                                    <td>{{ file.size() }}</td>
-                                    <td class="text-right">
-                                        {% include 'cup/form.twig' with {
-                                            'label': '<i class="fa fa-trash"></i>',
-                                            'type': 'checkbox',
-                                            'name': 'files[' ~ file.uuid ~ '][delete]',
-                                            'args': {
-                                                'value': 1
-                                            }
-                                        } %}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                    {% for file in entity.getDocuments() %}
+                        <div class="row py-2">
+                            <div class="col-6"><a href="{{ file.public_path() }}">{{ file.filename() }}</a></div>
+                            <div class="col-4 text-right">{{ file.size() }}</div>
+                            <div class="col-2 text-right">
+                                {% include 'cup/form.twig' with {
+                                    'label': '<i class="fa fa-trash"></i>',
+                                    'type': 'checkbox',
+                                    'name': 'files[' ~ file.uuid ~ '][delete]',
+                                    'args': {
+                                        'value': 1
+                                    }
+                                } %}
+                            </div>
+                        </div>
+                    {% endfor %}
                 {% endif %}
             </div>
         </div>
