--- a/src/Template/cup/form-image.twig
+++ b/src/Template/cup/form-image.twig
@@ -22,7 +22,7 @@
                 } %}
 
                 {% for file in entity.getImages() %}
-                    <div class="d-inline-block p-2 m-2 bg-grey2 text-center rounded">
+                    <div class="d-inline-block bg-grey2 text-center rounded">
                         {% if multiple %}
                             <div class="pb-2">
                                 {% include 'cup/form.twig' with {
