--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -413,7 +413,7 @@
                                 <ul class="nav">
                                     <li class="nav-item">
                                         <a class="nav-link" href="https://getwebspace.org" target="_blank">
-                                            WebSpace Engine
+                                            WebSpace
                                         </a>
                                     </li>
                                     <li class="nav-item">
