--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -44,7 +44,7 @@
                     </div>
                     <div class="card-body">
                         <div class="tab-content">
-                            {# Tab: Товар #}
+                            {# Tab: Product #}
                             <div class="tab-pane fade show active" id="product" role="tabpanel">
                                 <div class="row">
                                     <div class="col-12 col-md-6">
@@ -443,7 +443,7 @@
                                 </div>
                             </div>
 
-                            {# Tab: Атрибуты #}
+                            {# Tab: Attributes #}
                             <div class="tab-pane fade" id="attributes" role="tabpanel">
                                 <script>const attribute_types = {{ json_encode(attributes.sortBy('title').pluck('type', 'uuid')) }};</script>
 
@@ -485,7 +485,7 @@
                                 </div>
                             </div>
 
-                            {# Tab: Сопутствующие #}
+                            {# Tab: Related products #}
                             <div class="tab-pane fade" id="related" role="tabpanel">
                                 <div class="row">
                                     <div class="col-12 col-md-6 mb-3">
@@ -512,21 +512,21 @@
                                                 <a href="#" target="_blank">{{ related.title }}</a>
                                                 {% include 'cup/form.twig' with {
                                                     'type': 'number',
-                                                    'name': 'relation[]',
+                                                    'name': 'relations[]',
                                                     'postfix_btn': '<button type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button>',
                                                     'args': {'value': 1, 'min': 0, 'placeholder': '1.00'}
                                                 } %}
                                             </li>
 
-                                            {% for relation in item.getRelations() %}
+                                            {% for relation in item.relations %}
                                                 <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                                                    <a href="/cup/catalog/product/{{ relation.related.uuid }}/edit" target="_blank">{{ relation.related.title }}</a>
+                                                    <a href="/cup/catalog/product/{{ relation.uuid }}/edit" target="_blank">{{ relation.title }}</a>
                                                     {% include 'cup/form.twig' with {
                                                         'type': 'number',
-                                                        'name': 'relation['~ relation.related.uuid ~']',
+                                                        'name': 'relations['~ relation.uuid ~']',
                                                         'postfix_btn': '<button type="button" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button>',
                                                         'args': {
-                                                            'value': relation.count,
+                                                            'value': relation.pivot.count,
                                                             'min': 1,
                                                             'placeholder': 1,
                                                         }
