--- a/src/Template/cup/form-image.twig
+++ b/src/Template/cup/form-image.twig
@@ -21,7 +21,7 @@
                     }
                 } %}
 
-                {% for file in entity.getImages() %}
+                {% for file in entity.images %}
                     <div class="d-inline-block bg-grey2 text-center rounded">
                         {% if multiple %}
                             <div class="pb-2">
