--- a/src/Template/cup/form/view/list.twig
+++ b/src/Template/cup/form/view/list.twig
@@ -35,7 +35,7 @@
                                         {{ item.date|df }}
 
                                         <div class="text-black-50 ml-2 d-none d-lg-inline">
-                                            {% if item.hasFiles() %}
+                                            {% if item.files %}
                                                 <i class="fas fa-file" data-toggle="tooltip" data-placement="right" title="{{ 'Has files'|locale }}"></i>
                                             {% endif %}
                                         </div>
