fix min & max for tax value

--- a/src/Template/cup/reference/tax-rates/form.twig
+++ b/src/Template/cup/reference/tax-rates/form.twig
@@ -41,8 +41,9 @@
                                         'required': true,
                                         'value': item.value.rate|number_format(2, '.', ' '),
                                         'placeholder': '1',
-                                        'step': 'any',
-                                        'min': '0',
+                                        'step': 1,
+                                        'min': 0,
+                                        'max': 100,
                                     }
                                 } %}
                             </div>
