--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -88,7 +88,7 @@
                                         {% endif %}
                                     </div>
                                     <div class="col-4 col-sm-2 text-md-right">
-                                        {{ item.priceCalculated()|number_format(2, '.', ' ') }}
+                                        {{ item.price()|number_format(2, '.', ' ') }}
                                     </div>
                                     <div class="col-4 col-sm-3 text-right">
                                         <form action="/cup/catalog/product/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to uninstall the product?'|locale }}');">
